[project]
name = "netunicorn-library"
version = "0.4.15"
authors = [
    {name = "Sylee Beltiukov", email = "rbeltiukov@ucsb.edu"},
]
description = "netunicorn contrib library"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["netunicorn"]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "netunicorn-base >= 0.4.0, < 0.5.0",
]

[tool.setuptools]
package-dir = { "netunicorn.library.tasks" = "tasks", "netunicorn.library.pipelines" = "pipelines" }
packages = ["netunicorn", "netunicorn.library", "netunicorn.library.tasks", "netunicorn.library.pipelines"]
