[project]
name = "netunicorn-library"
version = "0.4.15"
authors = [
    {name = "Sylee Beltiukov", email = "rbeltiukov@ucsb.edu"},
]
description = "netunicorn contrib library"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["netunicorn"]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "netunicorn-base >= 0.4.0, < 0.5.0",
]

[tool.setuptools]
package-dir = { "netunicorn.library.tasks" = "tasks", "netunicorn.library.pipelines" = "pipelines" }
packages = [
    "netunicorn",
    "netunicorn.library",
    "netunicorn.library.tasks",
    "netunicorn.library.tasks.capture",
    "netunicorn.library.tasks.data_transfer",
    "netunicorn.library.tasks.handlers",
    "netunicorn.library.tasks.letsencrypt",
    "netunicorn.library.tasks.measurements",
    "netunicorn.library.tasks.network_attacks",
    "netunicorn.library.tasks.preprocessing",
    "netunicorn.library.tasks.qoe_youtube",
    "netunicorn.library.tasks.upload",
    "netunicorn.library.tasks.utils",
    "netunicorn.library.tasks.video_watchers",
    "netunicorn.library.pipelines",
]
